Fixed padding to 11px, to stop overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,7 +111,7 @@ h2, h3 {
     font-size: 160%;
     background-color: antiquewhite;
     border-radius: 10% 25%;
-    padding: 10px;
+    padding: 11px;
     color: darkgreen;
     font-family: "Protest Riot", sans-serif;
 }
